Fix most render problems where text is invisible.

--- a/packages/react-app/src/views/AnsiImageRender.css
+++ b/packages/react-app/src/views/AnsiImageRender.css
@@ -14,6 +14,7 @@
 
   .ansi-img {
     text-align: left;
+    color: white;
     background-color: black;
     font-family: 'PerfectDosVga437', monospace;
     font-size: 12px;
